fix: make orders more visible

--- a/src/components/DateFilter/DateFilter.module.scss
+++ b/src/components/DateFilter/DateFilter.module.scss
@@ -29,8 +29,8 @@
   cursor: pointer;
 
   svg {
-    width: 100%;
-    height: 100%;
+    width: 24px;
+    height: 24px;
     fill: $color-dark;
   }
 
